gobmkida/g2/owl_find_lunches
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_find_lunches/src/engine/owl.c:4639:12: error: expected expression
*( _OWORD *)( v3 - 192) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_find_lunches/src/engine/owl.c:4639:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v3 - 192) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_find_lunches/src/engine/owl.c:4649:12: error: expected expression
*( _OWORD *)( v3 - 208) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_find_lunches/src/engine/owl.c:4649:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v3 - 208) = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_find_lunches/src/obj/1/owl.o] Error 1
